--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,8 @@
 body
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    line-height: 25px;
+    font-weight: 400;
 }
 
 h2
